--- a/CoffeCheap/web/Mesa_Modificar.xhtml
+++ b/CoffeCheap/web/Mesa_Modificar.xhtml
@@ -10,7 +10,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 
-  <h:body>
+  <h:body class="ui-g">
     <ui:composition template="./WEB-INF/template/Template.xhtml">
       <ui:define name="content">
           
