--- a/CoffeCheap/web/Plato_Modificar.xhtml
+++ b/CoffeCheap/web/Plato_Modificar.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     
-    <h:body>
+    <h:body class="ui-g">
         <ui:composition template="./WEB-INF/template/Template.xhtml">
       <ui:define name="content">
           
