--- a/CoffeCheap/web/Plato_pedido_Eliminar.xhtml
+++ b/CoffeCheap/web/Plato_pedido_Eliminar.xhtml
@@ -69,7 +69,7 @@
               </p:column>
 
               <p:column style="width: 100px">
-                <h:commandLink value="Eliminar" style="color: #oooooo; width: 100px" actionListener="#{pedidoBean.eliminar(tabla)}"/>                    
+                <h:commandLink value="Eliminar" style="color: #oooooo; width: 100px" actionListener="#{plato_pedidoBean.eliminar(tabla)}"/>                    
               </p:column>                              
 
             </p:dataTable>
