--- a/CoffeCheap/web/Plato_pedido_Modificar.xhtml
+++ b/CoffeCheap/web/Plato_pedido_Modificar.xhtml
@@ -68,7 +68,7 @@
               </p:column>
 
               <p:column style="width: 100px">
-                <h:commandLink value="Modificar" style="color: #oooooo" actionListener="#{pedidoBean.modificar(tabla)}"/>                    
+                <h:commandLink value="Modificar" style="color: #oooooo" actionListener="#{plato_pedidoBean.modificar(tabla)}"/>                    
               </p:column>                               
 
             </p:dataTable>
