--- a/CoffeCheap/web/Unidad_medida_Guardar.xhtml
+++ b/CoffeCheap/web/Unidad_medida_Guardar.xhtml
@@ -18,10 +18,10 @@
 
           <h:panelGrid id="desplegar1" columns="2" cellpadding="5" border="1">
             <p:outputLabel value="Codigo Trasaccion" />
-            <p:autoComplete id="Codig" value="#{unidad_medidaBean.unidad_medida.id_unidad}" style="color: #ffffff;"/>                         
+            <p:autoComplete id="Codig" value="#{unidad_medidaBean.unidad_medida.id_unidad}" style="color: #oooooo;"/>                         
 
             <p:outputLabel  value="Nombre" />
-            <p:autoComplete id="Nombre" value="#{unidad_medidaBean.unidad_medida.nombre}" style="color: #ffffff;"/>
+            <p:autoComplete id="Nombre" value="#{unidad_medidaBean.unidad_medida.nombre}" style="color: #oooooo;"/>
 
           </h:panelGrid>
 
