--- a/CoffeCheap/web/Tipo_transacciones_Guardar.xhtml
+++ b/CoffeCheap/web/Tipo_transacciones_Guardar.xhtml
@@ -18,10 +18,10 @@
 
           <h:panelGrid id="desplegar1" columns="2" cellpadding="5" border="1">
             <p:outputLabel value="Codigo Trasaccion" />
-            <p:autoComplete id="Codig" value="#{tipo_transaccionesBean.tipo_transacciones.id_tipo_transacciones}" style="color: #ffffff;"/>                         
+            <p:autoComplete id="Codig" value="#{tipo_transaccionesBean.tipo_transacciones.id_tipo_transacciones}" style="color: #oooooo;"/>                         
 
             <p:outputLabel  value="Nombre" />
-            <p:autoComplete id="Nombre" value="#{tipo_transaccionesBean.tipo_transacciones.nombre}" style="color: #ffffff;"/>
+            <p:autoComplete id="Nombre" value="#{tipo_transaccionesBean.tipo_transacciones.nombre}" style="color: #oooooo;"/>
 
           </h:panelGrid>
 
