--- a/CoffeCheap/web/Receta_Guardar.xhtml
+++ b/CoffeCheap/web/Receta_Guardar.xhtml
@@ -17,7 +17,7 @@
         <f:event type="preRenderView" listener="#{unidad_medidaBean.listar()}"/>
         <h:panelGrid id="general" columns="3" cellpadding="5">
           <h:form id="form1">
-            <h:panelGrid id="panel1" columns="2" cellpadding="5" border="1" style="color: #ffffff">
+            <h:panelGrid id="panel1" columns="2" cellpadding="5" border="1" style="color: #oooooo">
               <p:outputLabel for="id_plato" value="Plato"/>
               <p:selectOneMenu id="id_plato" value="#{recetaBean.receta.plato.id_plato}">
                 <f:selectItem itemLabel="plato"/>
