--- a/CoffeCheap/web/contrasenia.xhtml
+++ b/CoffeCheap/web/contrasenia.xhtml
@@ -41,7 +41,7 @@
               <div class="input-field col s1"></div>
               <div class="input-field col s10">
 
-                <h4>Bienvenido #{verificar_login.usu.usuario}</h4>
+                  <h4>Bienvenido #{verificar_login.usu.nombre}</h4>
               </div>
             </div>
 
