--- a/CoffeCheap/web/contrasenia.xhtml
+++ b/CoffeCheap/web/contrasenia.xhtml
@@ -15,7 +15,7 @@
     <h:outputScript library="js" name="sweetalert.min.js"/>
     <f:event type="preRenderView" listener="#{verificar_login.vrificarSession()}"/>
   </h:head>
-  <h:body>
+  <h:body style=" background: url(resources/fondo18.jpg)">
     <h:form>
       <p:messages autoUpdate="true"/>
       <br/>
