--- a/CoffeCheap/web/Compra_Guardar.xhtml
+++ b/CoffeCheap/web/Compra_Guardar.xhtml
@@ -15,6 +15,7 @@
                 <f:event type="preRenderView" listener="#{orden_comprasBean.Mostrar()}"/>
                 <f:event type="preRenderView" listener="#{productoBean.Mostrar()}"/>
                 <h:form id="form1">
+                     <p:growl id="mess"/>
                     <br/>
                     <h:panelGrid id="panel1" columns="6" cellpadding="3" style="color: #ffffff" width="890PX">
                         
