--- a/CoffeCheap/web/Plato_Guardar.xhtml
+++ b/CoffeCheap/web/Plato_Guardar.xhtml
@@ -36,7 +36,7 @@
                 </p:selectOneMenu>
           </h:panelGrid>
 
-            <p:commandButton value="Guardar" update="mess"  actionListener="#{platoBean.registrar()}"/>
+            <p:commandButton value="Guardar" actionListener="#{platoBean.registrar()}"/>
 
           
         </h:form>
