--- a/CoffeCheap/web/Compra_Modificar.xhtml
+++ b/CoffeCheap/web/Compra_Modificar.xhtml
@@ -16,6 +16,7 @@
                 <f:event type="preRenderView" listener="#{productoBean.Mostrar()}"/>
                 <f:event type="preRenderView" listener="#{compraBean.Mostrar()}"/>
                 <h:form id="form1">
+                     <p:growl id="mess"/>
                     <br/>
                     <h:panelGrid id="panel1" columns="6" cellpadding="3" style="color: #oooooo" width="890PX">
                         <p:outputLabel for="Codigo" value="Codigo de Compra"/>
